--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
           </li>
         </ul>
       </div>
-      <section section="work-examples">
+      <section class="work-examples">
         <h2>Чем мы занимаемся</h2>
         <div>
-          <img src="img/img_1.jpg" alt="Фото работы за ноутбуком" />
+          <img src="img/img_1.jpg" alt="Фото работы за ноутбуком" width="370" />
         </div>
         <div>
-          <img src="img/img_2.jpg" alt="Фото с UI" />
+          <img src="img/img_2.jpg" alt="Фото с UI" width="370" />
         </div>
         <div>
-          <img src="img/img_3.jpg" alt="Фото с цветовым кругом" />
+          <img src="img/img_3.jpg" alt="Фото с цветовым кругом" width="370" />
         </div>
       </section>
       <section class="section-team">
