--- a/index.html
+++ b/index.html
@@ -1,104 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hw_1</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li>Студия</li>
-          <li>Портфолио</li>
-          <li>Контакты</li>
-        </ul>
-      </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tell:380961111111">+38 096 111 11 11</a>
-      </div>
-    </header>
-    <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-      </section>
-      <div>
-        <ul>
-          <li>
-            <span>Внимание к деталям</span>
-            <span
-              >Идейные соображения, а также начало повседневной работы по
-              формированию позиции.</span
-            >
-          </li>
-          <li>
-            <span>Пунктуальность</span>
-            <span
-              >Задача организации, в особенности же рамки и место обучения
-              кадров влечет за собой.</span
-            >
-          </li>
-          <li>
-            <span>Планирование</span>
-            <span
-              >Равным образом консультация с широким активом в значительной
-              степени обуславливает.</span
-            >
-          </li>
-          <li>
-            <span>Современные технологии</span>
-            <span
-              >Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.</span
-            >
-          </li>
-        </ul>
-      </div>
-      <section class="work-examples">
-        <h2>Чем мы занимаемся</h2>
-        <div>
-          <img src="img/img_1.jpg" alt="Фото работы за ноутбуком" width="370" />
-        </div>
-        <div>
-          <img src="img/img_2.jpg" alt="Фото с UI" width="370" />
-        </div>
-        <div>
-          <img src="img/img_3.jpg" alt="Фото с цветовым кругом" width="370" />
-        </div>
-      </section>
-      <section class="section-team">
-        <h2>Наша команда</h2>
-        <div class="team-card-1">
-          <img src="img/igor.jpg" alt="Фото Игорь Демьяненко" width="270" />
-          <span>Игорь Демьяненко</span>
-          <span>Product Designer</span>
-        </div>
-        <div class="team-card-2">
-          <img src="img/olga.jpg" alt="Фото Ольга Репина" width="270" />
-          <span>Ольга Репина</span>
-          <span>Frontend Developer</span>
-        </div>
-        <div class="team-card-3">
-          <img src="img/nikolay.jpg" alt="Николай Тарасов" width="270" />
-          <span>Николай Тарасов</span>
-          <span>Marketing</span>
-        </div>
-        <div class="team-card-4">
-          <img src="img/mihail.jpg" alt="Михаил Ермаков" width="270" />
-          <span>Михаил Ермаков</span>
-          <span>UI Designer</span>
-        </div>
-      </section>
-      <footer>
-        <a href="/">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tell:380961111111">+38 096 111 11 11</a>
-      </footer>
-    </main>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>hw_1</title>
+	</head>
+	<body class="body">
+		<header class="header">
+			<nav class="navigation">
+				<a href="/" class="logo">
+					Web
+					<span class="logo-color">Studio</span>
+				</a>
+				<ul>
+					<li class="link-style">
+						<!-- 
+                  Использовать псевдокласс :hover для линков
+               -->
+						<a href="" class="link">Студия</a>
+					</li>
+					<li class="link-style">
+						<a href="" class="link">Портфолио</a>
+					</li>
+					<li class="link-style">
+						<a href="" class="link">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="contacts">
+				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a href="tell:380961111111">+38 096 111 11 11</a>
+			</div>
+		</header>
+		<main class="main-content">
+			<section class="section-1">
+				<h1>Эффективные решения для вашего бизнеса</h1>
+				<button type="button">Заказать услугу</button>
+			</section>
+			<div class="descriprion-container">
+				<ul>
+					<li>
+						<span class="desc-title">Внимание к деталям</span>
+						<p class="desc-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li>
+						<span class="desc-title">Пунктуальность</span>
+						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					</li>
+					<li>
+						<span class="desc-title">Планирование</span>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li>
+						<span class="desc-title">Современные технологии</span>
+						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</div>
+			<section class="section-work-examples">
+				<h2>Чем мы занимаемся</h2>
+				<div>
+					<img src="img/img_1.jpg" alt="Фото работы за ноутбуком" width="370" class="we-img" />
+				</div>
+				<div>
+					<img src="img/img_2.jpg" alt="Фото с UI" width="370" class="we-img" />
+				</div>
+				<div>
+					<img src="img/img_3.jpg" alt="Фото с цветовым кругом" width="370" class="we-img" />
+				</div>
+			</section>
+			<section class="section-team">
+				<h2>Наша команда</h2>
+				<div class="team-card-1">
+					<img src="img/igor.jpg" alt="Фото Игорь Демьяненко" width="270" />
+					<span>Игорь Демьяненко</span>
+					<span>Product Designer</span>
+				</div>
+				<div class="team-card-2">
+					<img src="img/olga.jpg" alt="Фото Ольга Репина" width="270" />
+					<span>Ольга Репина</span>
+					<span>Frontend Developer</span>
+				</div>
+				<div class="team-card-3">
+					<img src="img/nikolay.jpg" alt="Николай Тарасов" width="270" />
+					<span>Николай Тарасов</span>
+					<span>Marketing</span>
+				</div>
+				<div class="team-card-4">
+					<img src="img/mihail.jpg" alt="Михаил Ермаков" width="270" />
+					<span>Михаил Ермаков</span>
+					<span>UI Designer</span>
+				</div>
+			</section>
+			<footer class="footer">
+				<a href="/">WebStudio</a>
+				<address>г. Киев, пр-т Леси Украинки, 26</address>
+				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a href="tell:380961111111">+38 096 111 11 11</a>
+			</footer>
+		</main>
+	</body>
 </html>
