--- a/index.html
+++ b/index.html
@@ -28,77 +28,81 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="contacts">
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tell:380961111111">+38 096 111 11 11</a>
-			</div>
+			<ul>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+			</ul>
 		</header>
 		<main class="main-content">
 			<section class="section-1">
 				<h1>Эффективные решения для вашего бизнеса</h1>
 				<button type="button">Заказать услугу</button>
 			</section>
-			<div class="descriprion-container">
+			<section class="descriprion-container">
+				<h2 hidden>Наши преимущества</h2>
+				<!-- comment -->
 				<ul>
 					<li>
-						<span class="desc-title">Внимание к деталям</span>
+						<h3>Внимание к деталям</h3>
 						<p class="desc-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
-						<span class="desc-title">Пунктуальность</span>
+						<h3>ПунПктуальность</h3>
 						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li>
-						<span class="desc-title">Планирование</span>
+						<h3>Планирование</h3>
 						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 					<li>
-						<span class="desc-title">Современные технологии</span>
+						<h3>Современные технологии</h3>
 						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
-			</div>
+			</section>
 			<section class="section-work-examples">
 				<h2>Чем мы занимаемся</h2>
 				<div>
-					<img src="img/img_1.jpg" alt="Фото работы за ноутбуком" width="370" class="we-img" />
+					<img src="./img/img_1.jpg" alt="Фото работы за ноутбуком" width="370" class="we-img" />
 				</div>
 				<div>
-					<img src="img/img_2.jpg" alt="Фото с UI" width="370" class="we-img" />
+					<img src="./img/img_2.jpg" alt="Фото с UI" width="370" class="we-img" />
 				</div>
 				<div>
-					<img src="img/img_3.jpg" alt="Фото с цветовым кругом" width="370" class="we-img" />
+					<img src="./img/img_3.jpg" alt="Фото с цветовым кругом" width="370" class="we-img" />
 				</div>
 			</section>
 			<section class="section-team">
 				<h2>Наша команда</h2>
-				<div class="team-card-1">
-					<img src="img/igor.jpg" alt="Фото Игорь Демьяненко" width="270" />
-					<span>Игорь Демьяненко</span>
-					<span>Product Designer</span>
-				</div>
-				<div class="team-card-2">
-					<img src="img/olga.jpg" alt="Фото Ольга Репина" width="270" />
-					<span>Ольга Репина</span>
-					<span>Frontend Developer</span>
-				</div>
-				<div class="team-card-3">
-					<img src="img/nikolay.jpg" alt="Николай Тарасов" width="270" />
-					<span>Николай Тарасов</span>
-					<span>Marketing</span>
-				</div>
-				<div class="team-card-4">
-					<img src="img/mihail.jpg" alt="Михаил Ермаков" width="270" />
-					<span>Михаил Ермаков</span>
-					<span>UI Designer</span>
-				</div>
+				<ul>
+					<li><img src="./img/igor.jpg" alt="Фото Игорь Демьяненко" width="270" /></li>
+					<p>Игорь Демьяненко</p>
+					<p>Product Designer</p>
+					<li><img src="./img/olga.jpg" alt="Фото Ольга Репина" width="270" /></li>
+					<p>Ольга Репина</p>
+					<p>Frontend Developer</p>
+					<li><img src="./img/nikolay.jpg" alt="Николай Тарасов" width="270" /></li>
+					<p>Николай Тарасов</p>
+					<p>Marketing</p>
+					<li><img src="./img/mihail.jpg" alt="Михаил Ермаков" width="270" /></li>
+					<p>Михаил Ермаков</p>
+					<p>UI Designer</p>
+				</ul>
 			</section>
-			<footer class="footer">
-				<a href="/">WebStudio</a>
-				<address>г. Киев, пр-т Леси Украинки, 26</address>
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tell:380961111111">+38 096 111 11 11</a>
-			</footer>
 		</main>
+		<footer class="footer">
+			<a href="/" class="logo">WebStudio</a>
+			<ul>
+				<li>
+					<address>
+						<a href="https://goo.gl/maps/fuVmJnnnXhuc2ty88" target="_blank" rel="noopener noreferer">
+							г. Киев, пр-т Леси Украинки, 26
+						</a>
+					</address>
+				</li>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
