--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p class="desc-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
-						<h3>ПунПктуальность</h3>
+						<h3>Пунктуальность</h3>
 						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li>
